# smart-calc

./: README.md
src/: Makefile  calculation_tests.cc
src/SmartCalc_V_2_0/: CMakeLists.txt  controller.cc  controller.h  credit_calc_view.cc  credit_calc_view.h  credit_calc_view.ui  deposit_calc_view.cc  deposit_calc_view.h  deposit_calc_view.ui  main.cc  main_view.cc  main_view.h  main_view.ui
src/models_lib/: credit_calculator_model.cc  credit_calculator_model.h  deposit_calculator_model.cc  deposit_calculator_model.h  expression_calculator_model.cc  expression_calculator_model.h
